# agentbeats-mini-swe-baseline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  amber-manifest.json5  pyproject.toml
purple/: __init__.py  executor.py  server.py
scripts/: preflight.sh  smoke_model.py  validate-manifest.py
